<?xml version="1.0" encoding="UTF-8" standalone="no"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9060" systemVersion="15B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="klV-EQ-8EP">
    <dependencies>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9051"/>
        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
    </dependencies>
    <scenes>
        <!--Login View Controller-->
        <scene sceneID="aNq-Wq-dMa">
            <objects>
                <viewController id="klV-EQ-8EP" customClass="LoginViewController" customModule="formkeep_ios" customModuleProvider="target" sceneMemberID="viewController">
                    <layoutGuides>
                        <viewControllerLayoutGuide type="top" id="Aui-Sz-bKu"/>
                        <viewControllerLayoutGuide type="bottom" id="reu-NF-aAe"/>
                    </layoutGuides>
                    <view key="view" contentMode="scaleToFill" id="mYP-LF-HkM">
                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xEC-6J-Jax">
                                <rect key="frame" x="20" y="220" width="560" height="160"/>
                                <subviews>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Email" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="0yS-zT-JMc">
                                        <rect key="frame" x="0.0" y="22" width="560" height="30"/>
                                        <animations/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits"/>
                                    </textField>
                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8Fg-3g-khR">
                                        <rect key="frame" x="0.0" y="73" width="560" height="30"/>
                                        <animations/>
                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                        <textInputTraits key="textInputTraits" secureTextEntry="YES"/>
                                    </textField>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="GTK-hz-jdF">
                                        <rect key="frame" x="261" y="122" width="38" height="30"/>
                                        <animations/>
                                        <state key="normal" title="Login"/>
                                        <connections>
                                            <action selector="login:" destination="klV-EQ-8EP" eventType="touchUpInside" id="eWk-xC-Kj8"/>
                                        </connections>
                                    </button>
                                </subviews>
                                <animations/>
                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                <constraints>
                                    <constraint firstItem="8Fg-3g-khR" firstAttribute="leading" secondItem="xEC-6J-Jax" secondAttribute="leading" id="0C0-3Y-CAw"/>
                                    <constraint firstItem="GTK-hz-jdF" firstAttribute="centerX" secondItem="xEC-6J-Jax" secondAttribute="centerX" id="AXa-Lr-tEX"/>
                                    <constraint firstAttribute="height" constant="160" id="Ixt-SU-5jP"/>
                                    <constraint firstItem="0yS-zT-JMc" firstAttribute="leading" secondItem="xEC-6J-Jax" secondAttribute="leading" id="Nyo-mH-xlE"/>
                                    <constraint firstItem="8Fg-3g-khR" firstAttribute="top" secondItem="0yS-zT-JMc" secondAttribute="bottom" constant="21" id="O72-NT-7r6"/>
                                    <constraint firstItem="0yS-zT-JMc" firstAttribute="leading" secondItem="xEC-6J-Jax" secondAttribute="leading" id="WAm-kd-obB"/>
                                    <constraint firstItem="0yS-zT-JMc" firstAttribute="top" secondItem="xEC-6J-Jax" secondAttribute="top" constant="22" id="aHD-Pv-BhM"/>
                                    <constraint firstAttribute="trailing" secondItem="0yS-zT-JMc" secondAttribute="trailing" id="dDM-Aw-3gt"/>
                                    <constraint firstAttribute="trailing" secondItem="8Fg-3g-khR" secondAttribute="trailing" id="hIM-Y4-NAa"/>
                                    <constraint firstAttribute="bottom" secondItem="GTK-hz-jdF" secondAttribute="bottom" constant="8" id="jwV-gL-zBv"/>
                                    <constraint firstItem="0yS-zT-JMc" firstAttribute="centerX" secondItem="xEC-6J-Jax" secondAttribute="centerX" id="uUy-us-ld2"/>
                                </constraints>
                                <variation key="default">
                                    <mask key="constraints">
                                        <exclude reference="WAm-kd-obB"/>
                                    </mask>
                                </variation>
                            </view>
                        </subviews>
                        <animations/>
                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                        <constraints>
                            <constraint firstItem="xEC-6J-Jax" firstAttribute="top" secondItem="Aui-Sz-bKu" secondAttribute="bottom" constant="146" id="7cZ-J0-ggR"/>
                            <constraint firstItem="xEC-6J-Jax" firstAttribute="centerY" secondItem="mYP-LF-HkM" secondAttribute="centerY" id="A6P-kw-R7G"/>
                            <constraint firstItem="xEC-6J-Jax" firstAttribute="top" secondItem="Aui-Sz-bKu" secondAttribute="bottom" constant="146" id="Rnl-l9-HaB"/>
                            <constraint firstItem="xEC-6J-Jax" firstAttribute="trailing" secondItem="mYP-LF-HkM" secondAttribute="trailingMargin" id="SJY-yH-nQ2"/>
                            <constraint firstItem="xEC-6J-Jax" firstAttribute="centerX" secondItem="mYP-LF-HkM" secondAttribute="centerX" id="ZGw-Ai-blb"/>
                            <constraint firstItem="xEC-6J-Jax" firstAttribute="leading" secondItem="mYP-LF-HkM" secondAttribute="leadingMargin" id="hnx-Ly-82j"/>
                        </constraints>
                        <variation key="default">
                            <mask key="constraints">
                                <exclude reference="7cZ-J0-ggR"/>
                                <exclude reference="Rnl-l9-HaB"/>
                            </mask>
                        </variation>
                    </view>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="hX7-ta-TKN" userLabel="First Responder" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="347" y="381"/>
        </scene>
    </scenes>
</document>
